rtg_tests/negative/excluded_cgo/go.mod
module example.com/rtgtests/negative/cgo

go 1.25
